# knowledge-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING-detectors.md  README.md  install.sh  pytest.ini
depgraph/: .gitignore  DRIFT.md  MIGRATION.md  PROCESS.md  README.md  __init__.py  languages.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
depgraph/depgraph/: __init__.py
depgraph/examples/: POST__api_invite_invite_code_accept.json  POST__api_invite_invite_code_accept.md  README.md
depgraph/extractors/: README.md  extract_api.py  extract_expo.ts  extract_tests.ts  extract_web.ts  reconcile.py
depgraph/hooks/: README.md  post_edit_regen.py  post_edit_telemetry.py  pre_edit_inject.py
depgraph/lib/: chunker.py  config.py  coverage_caveats.py  edges.py  embeddings.py  language_registry.py  path_filters.py  primitives.py  rollup.py  test_coverage.py
depgraph/nodes/: _meta.json
depgraph/plugins/: AGENTS.md  README.md  __init__.py  base.py
depgraph/schema/: dependents.schema.json  dossier.schema.md  node.schema.json
depgraph/telemetry/: acknowledgments.jsonl  injections.jsonl
depgraph/tests/: test_chunker.py  test_config.py  test_coverage_caveats.py  test_domain_orphan_archival.py  test_dossier_draft_prompt.py  test_dossier_stubbing.py  test_embeddings.py  test_file_orphan_archival.py  test_flag.py  test_graphui_search.py  test_health.py  test_kitchen_sink.py  test_orphans_archival.py  test_path_filters.py  test_plugin_registry.py  test_pre_edit_inject_v2.py  test_reconcile_embeddings.py  test_reconcile_route_calls.py  test_reconcile_v2.py  (+18 more)
(+4089 files in other folders)
