[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "0.1.0"
description = "Knowledge graph dependency extractor"
requires-python = ">=3.9"
dependencies = [
    "fastembed>=0.3",
    "tree-sitter>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-python>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["lib", "hooks", "schema", "extractors", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
