[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "0.1.0"
description = "Knowledge graph dependency extractor"
requires-python = ">=3.9"
dependencies = [
    "fastembed>=0.3",
    "tree-sitter>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-python>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["lib*", "extractors*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = [".."]
norecursedirs = ["fixtures"]
markers = [
    "memory_budget: peak-RSS smoke test for the TS extractor (requires /usr/bin/time -v; opt-out via `-m 'not memory_budget'`).",
]
